--- a/themes/montessori-theme/sass/_extra.scss
+++ b/themes/montessori-theme/sass/_extra.scss
@@ -14,8 +14,11 @@
 }
 /// Container wrapper to wrap all the content in the pages//
 .content-wrapper {
-    border-bottom: solid 3px $color_btn_green;
+  @include desktop{
     max-width: 85%;
+  }
+    border-bottom: solid 3px $color_btn_green;
+    max-width: 96%;
     margin: 0 auto;
     height: 100%;
     padding: 30px 0;
