--- a/themes/montessori-theme/sass/_involved.scss
+++ b/themes/montessori-theme/sass/_involved.scss
@@ -1,8 +1,6 @@
-
 .main-title {
   padding-left: 2em;
 }
-
 #involved-container {
   display: -webkit-flex;
   display: flex;
@@ -11,19 +9,18 @@
   margin-left: 5%;
   margin-right: 5%;
   margin-bottom: 5%;
-
-  #column-left {
-    -webkit-flex: 3;
-    flex: 3;
-    height: 500px;
-    background-color: #FFF;
-    margin-left: 25px;
-    border-right: 3px solid #4FC8A1;
-    border-radius: 5px;
-    margin-bottom: 5em;
-    flex-direction: column;
-  }
-
+  // #column-left {
+  //   -webkit-flex: 3;
+  //   flex: 3;
+  //   height: 500px;
+  //   background-color: #FFF;
+  //   margin-left: 25px;
+  //   border-right: 3px solid #4FC8A1;
+  //   border-radius: 5px;
+  //   margin-bottom: 5em;
+  //   flex-direction: column;
+  //   // border-bottom: 3px solid $color_btn_green;
+  // }
   #column-right {
     -webkit-flex: 1;
     flex: 1;
@@ -31,28 +28,48 @@
     margin-right: 25px;
     flex-direction: column;
   }
-
 }
-
+.involved-content{
+  blockquote {
+      text-align: left;
+  }
+  p {
+      width: 100%;
+      text-align: left;
+      display: inline;
+      overflow: hidden;
+  }
+  width: 100%;
+  blockquote {
+      width: 100%;
+  }
+  @include desktop {
+       @include quote{
+  }
+}
+}
+// This is for green line
+// .text-shadow {
+//     border-top: 10px solid #248e6a;
+//     width: 100%;
+//     margin-bottom: 5px;
+// }
 #involved-support-now {
   width: 100%;
   border-bottom: 3px solid #4FC8A1;
   height: 200px;
   float: left;
 }
-
 #yearsArchives {
   text-align: center;
   padding-left: 40px;
 }
-
 .title-container {
   display: flex;
   flex: 1;
   width: 100%;
   padding-left: 10%; // Reminder to come back and use variables for margins and padding and mobile.
 }
-
 // Three main top green buttons
 .title-link {
   width: 270px;
@@ -61,7 +78,6 @@
   padding-top: 24px;
   color: #333;
 }
-
 .involved-title-box {
   border-radius: 10px;
   width: 270px;
@@ -71,83 +87,50 @@
   flex-direction: column;
   text-align: center;
   padding-top: 20px;
-
     &:hover {
       background-color: #4FC8A1;
     }
 }
-
-// Blockqoute
-/*blockquote {
-  font-size: 1.1em;
-  border-left: 10px solid #D93B57;
-  padding-left: 20px;
-  height: 3em;
-
-  blockquote p {
-    display: flex;
-    flex-flow: column;
-  }
-}*/
-
 #involved-titles-container {
   padding-bottom: 100px;
 }
-
-// Interested button
-.interest {
+.gre-button{
   width: 280px;
   height: 60px;
   border-radius: 10px;
   background-color: #4FC8A1;
 }
-
-.involved-interview {
-  width: 280px;
-  height: 60px;
-  border-radius: 10px;
-  background-color: #4FC8A1;
-}
-
 .green-button {
   color: #FFF;
   font-size: 1.5em;
 }
-
 .full-width-section {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: column; /* works with row or column */
   flex-direction: column;
   align-items: center;
-
   .full-width-section-item {
     -webkit-flex: 1;
     flex: 1;
     flex-direction: column;
   }
 }
-
-#sliderImages {
+.support-img {
   width: 100%;
   text-align: center;
   margin-top: 1%;
   position: relative;
-
 }
-
 .involved-slider {
   height: 340px;
   width: 100%;
   background-color: #FFF;
-
 }
-
 #circle-text {
   vertical-align: middle;
   color: #FFF;
 }
-
 // This for green circle btn
 #circle-button {
     width: 200px;
@@ -166,11 +149,9 @@
     font-family: Asap;
     line-height: 35px;
 }
-
 #Donation {
   width: 100%;
 }
-
 // This for volenteer btn
 .donation-button {
   width: 320px;
@@ -189,30 +170,134 @@
   letter-spacing: 0.8px;
   text-decoration: none;
 }
-
 .donation-button-group {
   height: 60px;
   margin-bottom: 10px;
 }
-
 .re-btn {
   margin-right: 60px;
   float: right;
 }
-
 // This for donation
 .pink-btn {
   margin-left: 60px;
   float: left;
 }
-.involved-options-donations {
-  width: 100%;
-  height: 350px;
-  display: none;
+// past envet section
+.past-event-wrapper {
+    margin: 0 auto;
+    .past-event {
+        border-top: 2px solid #248E6A;
+        margin: 0 60px;
+        .event-years {
+            font-size: 20px;
+            .year {
+                color: #248E6A;
+                ul {
+                    color: #000;
+                    line-height: 5rem;
+                }
+            }
+            //year
+        }
+        //event-years
+    }
+    //past-event
+    @include desktop{
+      display: none;
+    }
 }
-
-.involved-options-volunteer {
-  width: 100%;
-  height: 350px;
-  display: none;
+//past-event-wrapper
+// suppoert now section
+.support-section {
+    margin: 0 60px;
+    .title {
+        border-top: 2px solid #248E6A;
+        // margin: 0px 60px;
+    }
+    .image-wrapper {
+        display: inline-flex;
+        p {
+            width: 100%;
+            height: 80px;
+            position: absolute;
+            margin-top: 185px;
+            color: #fff;
+            font-size: 24px;
+            background-color: rgba(0,0,0,.74);
+            text-align: center;
+            padding: 20px;
+        }
+        .first-image {
+            margin: 30px;
+            position: relative;
+            display: flex;
+            z-index: -1;
+            height: auto;
+        }
+        .second-image {
+            margin: 30px;
+            position: relative;
+            display: flex;
+            z-index: -1;
+            height: auto;
+        }
+        .third-image {
+            margin: 30px;
+            position: relative;
+            display: flex;
+            z-index: -1;
+            height: auto;
+        }
+    }
+    .bracket {
+        padding: 0;
+        margin: 10px 0 20px 30px;
+        height: 7rem;
+        @include desktop {
+            margin: 0;
+            min-width: 16rem;
+            height: 8rem;
+        }
+        img {
+            position: relative;
+            height: 100%;
+            width: 100%;
+            padding-top: 0;
+            @include desktop {
+                height: 50px;
+                width: 100%;
+                padding-top: 0;
+                margin-top: 0;
+            }
+        }
+    }
+}
+// your involvment section
+.your-involvement-wrapper {
+    width: 250px;
+    height: 250px;
+    font-family: 'Asap';
+    font-size: 24px;
+    text-align: center;
+    line-height: 27px;
+    color: #fff;
+    background-color: #4FC8A1;
+    text-align: center;
+    margin: 0 auto;
+    border-radius: 50%;
+    p {
+        text-align: center;
+        padding: 40px;
+        font-size: 32px;
+    }
+}
+.make-donation-wrapper {
+    height: auto;
+    .donation {
+        color: #fff;
+        background-color: #F76072;
+        margin: 40px;
+        padding: 30px;
+    }
 }
